@@ -2604,7 +2604,7 @@ gtk_menu_paint (GtkWidget      *widget,
 		     widget->window,
 		     GTK_STATE_NORMAL,
 		     GTK_SHADOW_OUT,
-		     NULL, widget, "menu",
+		     &event->area, widget, "menu",
 		     0, 0, -1, -1);
       if (menu->upper_arrow_visible && !menu->tearoff_active)
 	{
@@ -2612,7 +2612,7 @@ gtk_menu_paint (GtkWidget      *widget,
 			   widget->window,
 			   priv->upper_arrow_state,
 			   GTK_SHADOW_OUT,
-			   NULL, widget, "menu_scroll_arrow_up",
+			   &event->area, widget, "menu_scroll_arrow_up",
 			   GTK_ARROW_UP,
 			   TRUE,
 			   (width - arrow_size ) / 2,
@@ -2626,7 +2626,7 @@ gtk_menu_paint (GtkWidget      *widget,
 			   widget->window,
 			   priv->lower_arrow_state,
 			   GTK_SHADOW_OUT,
-			   NULL, widget, "menu_scroll_arrow_down",
+			   &event->area, widget, "menu_scroll_arrow_down",
 			   GTK_ARROW_DOWN,
 			   TRUE,
 			   (width - arrow_size) / 2,
